<resources>
        <string name="app_name">MeMe</string>
        <string name="app_name_styled"><font color="#17c19a">Me</font>Me</string>
        <string name="app_name_slogan">Because We Can!</string>
        <string name="default_media_location_folder">MeMeCorp</string>
        <string name="app_version">v</string>
            <string name="sing_in_button">Sign In</string>
            <string name="sing_up_button">Sign Up</string>
            <string name="welcome_error_auth_failed">Authentication Failed</string>
            <string name="welcome_connecting">Connecting…</string>
            <string name="login_title_activity">Sign In</string>
            <string name="login_prompt_email">Email</string>
            <string name="login_prompt_password">Password</string>
            <string name="login_action_sign_in_short">Sign in</string>
            <string name="login_remember_me">Remember Me</string>
            <string name="login_auto_login">Auto Login</string>
            <string name="login_action_sign_in">Sign in</string>
            <string name="login_checking">Checking…</string>
            <string name="login_field_required">required</string>
            <string name="login_forgot_password">Forgot Password?</string>
            <string name="login_field_short_seconds">s</string>
            <string name="login_forgot_password_link_color">#0099CC</string>
            <string name="login_info_email_sent">Please Check Your email</string>
            <string name="login_info_email_not_verified">Email is not verified yet. Resend verification email?</string>
            <string name="login_error_auth_failed">Authentication Failed</string>
            <string name="login_error_email_empty">Email Is Empty</string>
            <string name="login_notification_email_sent">Email Is Sent</string>
            <string name="login_notification_email_not_verified">Your email is not verified yet.</string>
            <string name="login_log_sign_in">signIn:</string>
            <string name="login_log_sign_in_with_email_success">signInWithEmail: success</string>
            <string name="login_log_sign_in_with_email_failure">signInWithEmail: failure</string>
            <string name="terms_title_activity">Terms Of Use</string>
            <string name="terms_accept_terms">Accept</string>
            <string name="terms_decline_terms">Decline</string>
            <string name="register_title_activity">Sign Up</string>
            <string name="register_prompt_name">Name</string>
            <string name="register_prompt_email">Email</string>
            <string name="register_prompt_password">Password</string>
            <string name="register_prompt_password_confirm">Confirm Password (optional)</string>
            <string name="register_action_sign_up">Sign up</string>
            <string name="register_error_invalid_email">Your email address is invalid</string>
            <string name="register_error_invalid_password">This password is too short</string>
            <string name="register_error_empty_password">This password is empty</string>
            <string name="register_error_not_equal_password">Passwords are not equal</string>
            <string name="register_checking">Checking…</string>
            <string name="register_field_required">required</string>
            <string name="register_email_field_incorrect_format">Incorrect email format</string>
            <string name="register_error_auth_failed">Registration Failed</string>
            <string name="register_error_auth_passed">Registration Passed</string>
            <string name="register_check_email">Please check your email box</string>
            <string name="register_check_email_unsupported_domain">Unsupported email domain</string>
            <string name="register_log_sign_up">signUp:</string>
            <string name="register_agreement">I agree to the <a href="https://termsfeed.com/terms-conditions/99d4182b95758e526419909a033278d6">Terms and Conditions</a> \n and the <a href="https://termsfeed.com/privacy-policy/d4f0a4d7f7f46ffea23399daee7f9274">Privacy Policy</a> of application</string>
            <string name="register_log_create_user_with_email_success">createUserWithEmail: success</string>
            <string name="register_log_create_user_with_email_failure">createUserWithEmail: failure</string>
            <string name="main_menu_title_activity">MeMe</string>
            <string name="main_menu_action_settings">Settings</string>
            <string name="main_menu_social_net_group">Social Networks</string>
            <string name="main_menu_chat_group">Chats</string>
            <string name="main_menu_mail_group">Email Services</string>
            <string name="main_menu_video_group">Video Services</string>
            <string name="main_menu_info_group">Info Services</string>
            <string name="main_menu_update_released"> New version has released. Update now?</string>
            <string name="main_menu_yes">Yes</string>
            <string name="main_menu_later">Later</string>
            <string name="main_menu_no">No</string>
            <string name="main_west_ordered_channel_set" translatable="false">Facebook|Telegram|VKontakte|Tumblr|Discord|Skype|Pinterest|LinkedIn|Slack|Gmail|Mail.ru|Twitter|Youtube|Twitch|Instagram|ICQ|Reddit|Quora|Habr|OK.RU|GG|StackOverflow</string>
            <string name="main_east_ordered_channel_set" translatable="false">VKontakte|Facebook|Telegram|OK.RU|Tumblr|Discord|Skype|Pinterest|Gmail|Mail.ru|Twitter|Youtube|Twitch|Instagram|ICQ|Reddit|Quora|Habr|LinkedIn|GG|Slack|StackOverflow|</string>
            <string name="webview_loading_video">Loading…</string>
            <string name="global_setting_title">Global Settings</string>
            <string name="global_settings_list_preference_notification_type">Notification</string>
            <string name="global_settings_list_preference_melody_type">Melody</string>
            <string name="global_settings_list_preference_language_type">Language</string>
            <string name="global_settings_language_changed">Language has been changed</string>
            <string name="global_settings_pref_change_password_button">pref_change_password_button</string>
            <string name="global_settings_pref_remove_account_button">pref_remove_account_button</string>
            <string name="global_settings_key_notification_list_preference">key_notification_list_preference</string>
            <string name="global_settings_key_melody_list_preference">key_melody_list_preference</string>
            <string name="global_settings_key_language_list_preference">key_language_list_preference</string>
            <string-array name="global_settings_notification_list">
                <item>Vibro</item>
                <item>Ringtone</item>
                <item>No</item>
            </string-array>
            <string-array name="global_settings_language_list">
                <item>english</item>
                <item>русский</item>
            </string-array>
            <string-array name="global_settings_notification_list_values">
                <item>-1</item>
                <item>0</item>
                <item>1</item>
            </string-array>
            <string-array name="global_settings_language_list_values">
                <item>0</item>
                <item>1</item>
            </string-array>
            <string name="channel_setting_title">Channel Settings</string>
            <string name="channel_setting_switcher_on">On</string>
            <string name="channel_setting_switcher_off">Off</string>
            <string name="channel_setting_vk" translatable="false">VKontakte</string>
            <string name="channel_setting_fb" translatable="false">Facebook</string>
            <string name="channel_setting_tl" translatable="false">Telegram</string>
            <string name="channel_setting_skp" translatable="false">Skype</string>
            <string name="channel_setting_ok" translatable="false">OK.RU</string>
            <string name="channel_setting_tmb" translatable="false">Tumblr</string>
            <string name="channel_setting_dc" translatable="false">Discord</string>
            <string name="channel_setting_yt" translatable="false">Youtube</string>
            <string name="channel_setting_twitch" translatable="false">Twitch</string>
            <string name="channel_setting_ln" translatable="false">LinkedIn</string>
            <string name="channel_setting_tw" translatable="false">Twitter</string>
            <string name="channel_setting_pn" translatable="false">Pinterest</string>
            <string name="channel_setting_icq" translatable="false">ICQ</string>
            <string name="channel_setting_gadu" translatable="false">GG</string>
            <string name="channel_setting_slack" translatable="false">Slack</string>
            <string name="channel_setting_inst" translatable="false">Instagram</string>
            <string name="channel_setting_gmail" translatable="false">Gmail</string>
            <string name="channel_setting_mailru" translatable="false">Mail.ru</string>
            <string name="channel_setting_reddit" translatable="false">Reddit</string>
            <string name="channel_setting_quora" translatable="false">Quora</string>
            <string name="channel_setting_stack" translatable="false">StackOverflow</string>
            <string name="channel_setting_habr" translatable="false">Habr</string>
            <string name="channel_setting_soundcloud" translatable="false">SoundCloud</string>
            <string name="channel_setting_spotify" translatable="false">Spotify</string>
            <string name="channel_setting_notifications_prefix" translatable="false">_notifications</string>
            <string name="channel_setting_notifications">Notifications</string>
            <string name="channel_settings_log_channel_is_null">channel is null</string>
            <string name="change_password_title">Password Changing</string>
            <string name="change_password_action_change_password">Change Password</string>
            <string name="change_password_old_password">Old Password</string>
            <string name="change_password_current_password">Current Password</string>
            <string name="change_password_new_account_password">New Password</string>
            <string name="change_password_confirm_password">Confirm New Password</string>
            <string name="change_password_action_save_password">Save</string>
            <string name="change_password_old_password_empty">old password is empty</string>
            <string name="change_password_new_password_empty">new password is empty</string>
            <string name="change_password_new_confirm_password_empty">new confirm password is empty</string>
            <string name="change_password_old_password_is_different">old password is different</string>
            <string name="change_password_new_and_confirm_passwords_are_different">New and Confirm passwords are different</string>
            <string name="change_password_old_and_new_passwords_are_same">Old and New passwords are same</string>
            <string name="change_password_updated">Password Updated</string>
            <string name="change_password_log_new_password_can_not_be_set">new password can not be set</string>
            <string name="change_password_log_password_updated">password updated</string>
            <string name="change_password_log_error_password_not_updated">error password not updated</string>
            <string name="change_password_log_password_has_been_validated">password has been validated</string>
            <string name="change_password_log_error_auth_failed">authentication failed</string>
            <string name="remove_account_confirm_button">Confirm</string>
            <string name="remove_account_action">Enter Your Current Password</string>
</resources>