<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_background"
    tools:context=".core.activity.intro.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:scaleType="center"
            app:srcCompat="@mipmap/welcome_logo" />

        <ProgressBar
            android:id="@+id/welcome_progressBar_cyclic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100sp"
            android:minWidth="100sp"
            android:visibility="invisible"
            android:indeterminateDrawable="@drawable/progress"/>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="0.1"
            android:orientation="vertical"
            android:visibility="visible"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/sign_button"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="signInActivity"
                android:text="@string/sing_in_button" />

            <Button
                android:id="@+id/sign_up_button"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="signUpActivity"
                android:text="@string/sing_up_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/welcome_app_name_styled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/welcome_app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_slogan"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/app_build_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>
